# gautier_rss_reader8

./: .gitignore  AUTHORS  COPYING  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  config.h.in  configure  configure.ac  gautierrss.spec
debian/: changelog  control  copyright  install  rules
desktop/: gautierrss.appdata.xml  gautierrss.desktop  newsreader.appdata.xml  newsreader.desktop
src/rss_lib/db/impl/: db.cpp
src/rss_lib/rss/impl/: rss_writer.cpp
src/rss_ui/: app_resources.xml
src/rss_ui/app_win/impl/: app_win.cpp
src/rss_ui/impl/: application.cpp
src/rss_ui/rss_manage/: rss_manage.hpp
src/rss_ui/rss_manage/impl/: rss_manage.cpp
